# tauri-reproduction

9716/new/: README.md  package.json  vite.config.ts
9716/new/src/: App.css  icon.tsx  index.tsx
9716/new/src-tauri/: Cargo.toml
9716/new/src-tauri/capabilities/: default.json
9716/new/src/css/home/: MainTask.css
9716/old/: index.html  pnpm-lock.yaml  tsconfig.json
9716/old/src/: App.tsx  styles.css
9716/old/src-tauri/: tauri.conf.json
9716/old/src-tauri/src/: main.rs  resp.rs  setup.rs  window.rs
9716/old/src/components/: Home.tsx
9716/old/src/components/home/: MainTask.tsx
