[package]
name = "kanb"
version = "0.0.0"
description = "KanB"
authors = ["Borber"]
license = "GPLv3"
edition = "2021"


[build-dependencies]
tauri-build = { version = "2.0.0-beta", features = [] }

[dependencies]
anyhow = "1"

tokio = { version = "1", features = ["full"] }

tauri = { version = "2.0.0-beta", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"
strip = "symbols"
